@@ -1,3 +1,9 @@
+Wed Jan  5 15:20:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * DAnCE/DomainApplicationManager/Deployment_Configuration.inl:
+        * DAnCE/tests/Config_Handlers/Handler_Test.i:
+          Removed inl/i file, updated h,cpp
+
 Wed Jan  5 14:57:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tools/Assembly_Deployer/Deployment_Configuration.{h,cpp,inl}:
